src/objects/Cartera_Cerrada__c.object
<CustomObject>
    <fields>
        <fullName>Adjetivo_Fecha__c</fullName>
        <label>Adjetivo Fecha</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calf__c</fullName>
        <label>Calf</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Fecha__c</fullName>
        <label>Ciudad Fecha</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Carteras Cerradas</relationshipLabel>
        <relationshipName>Carteras_Cerradas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Desacuerdo__c</fullName>
        <label>Desacuerdo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad__c</fullName>
        <label>Entidad</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Obligacion__c</fullName>
        <label>Estado Obligacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Apertura__c</fullName>
        <label>Fecha Apertura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Cierre__c</fullName>
        <label>Fecha Cierre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Cuenta__c</fullName>
        <label>Numero Cuenta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina_Deudor__c</fullName>
        <label>Oficina Deudor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiempo__c</fullName>
        <label>Tiempo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Cuenta__c</fullName>
        <label>Tipo Cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Cupo_Inicial__c</fullName>
        <label>Valor Cupo Inicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>